# docquil

./: .env  README.md  docquil.py  pyproject.toml  requirements.txt  sample_env
credentials/: client_secret_786521752917-avla7vuibj999nuko2jorcjbibkfovr2.apps.googleusercontent.com.json
